--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <header>
 <div id="name">
-<span class="there">MAYA<span class="expand">&nbsp;&nbsp;</span>A</span><span class="expand">NGELICA</span><span class="expand">&nbsp;&nbsp;</span><span class="there">H</span><span class="expand">ERNANDEZ</span></div>
+<span class="there">MAYA<span class="expand">&nbsp;&nbsp;</span>A</span><span class="expand">NGELIC<span class="black">A</span></span><span class="expand">&nbsp;&nbsp;</span><span class="there black">H</span><span class="expand black">ERNANDEZ</span></div>
 </header>
 
 
