--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <hr class="style17">
 <div class="container">
 	<div class="row">
-		<div class="col-lg-4 col-md-4 col-sm4">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 		<div class="column-title">I AM...</div>
 		<ul>
 		  <li>from Sacramento, CA</li>
@@ -43,12 +43,11 @@
 		  <li>a dual U.S./Filipino citizen</li>
 		  <li>striving to be a <a href="http://www.kozaigroup.com/intercultural-effectiveness-scale-ies/">global citizen</a></li>
 		  <li>interested in the challenges of front-end</li>
-		  <li>appreciating how my computer's OS has more than one process open at the same time</li>
 		  <li>looking for the next step in my career</li>
 		  <li>looking for some hot Cheetos</li>
 		</ul>
 		</div>
-		<div class="col-lg-4 col-md-4 col-sm4">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 		<div class="column-title">I LIKE...</div>
 		<ul>
 		  <li>creating</li>
@@ -63,7 +62,7 @@
 		  <li>looking out the window on long travels</li>
 		</ul>
 		</div>
-		<div class="col-lg-4 col-md-4 col-sm4">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 		<div class="column-title">I KNOW...</div>
 		<ul>
 		  <li>Python</li>
@@ -250,7 +249,7 @@
 	<div class="container">
 		<div class="title">First Steps Android App</div>
 		<div class="description">
-		The User and Interface Design Class at Berkeley, CS160, divided us into groups based on our skill sets. I was placed in a group with Simon Cao, Zach Hawtof, Ryan Kapur, and Hector Gonzalez. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. As the theme of the semester was focused on healthcare, we decided to target an uncommon audience -- alcoholics. The app idea: to help alcoholics find AA meetings best fit for them to encourage them to stay sober. We thought of an idea, compared it to competitors already in the market, interviewed alcoholics, and attended AA meetings to make sure what we created wouldn't be condescending or unhelpful. My responsibilites laid heavily more on the design and execution of presentation side, also making sure that teammates were kept on track. Although our group was formed by the staff, it worked out wonderfully. I had such an amazing time with them, our group chat was popping with GIFS, and we always encouraged and helped each other out.
+		The User and Interface Design Class at Berkeley, CS160, divided us into groups based on our skill sets. I was placed in a group with Simon Cao, Zach Hawtof, Ryan Kapur, and Hector Gonzalez. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. As the theme of the semester focused on healthcare, we decided to target an uncommon audience -- alcoholics. The app idea: to help alcoholics find AA meetings best fit for them to encourage them to stay sober. We compared it to competitors already in the market, interviewed alcoholics, and attended AA meetings to make sure what we created wouldn't be condescending or unhelpful. My responsibilites laid more on the design and execution of presentation side, also making sure that teammates were kept on track. I'm lucky to have been placed randomly with my teammates. I had such an amazing time with them, our group chat was popping with GIFS, and we always encouraged and helped each other out.
 		</div>
 	</div>
 	<div class="back">
@@ -283,7 +282,7 @@
 	<div class="container">
 		<div class="title">GrooveCube</div>
 		<div class="description">
-		The Critical Practices class at UC Berkeley, CNM190, divided us into groups almost randomly. I was placed in a group with Serena Chang, Alice Pang, Mark Lam, and Ingrid Hong. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. Our chosen community for this assignment were dance teams in Berkeley. Our focus was on freestyle circles and how to encourage shy people to participate and foster a closer community within these dance teams. Some components used were a Raspberry Pi, the Raspberry Pi camera module, speaker, light, WiFi dongle, and a laser cutter for the acrylic casing and GrooveCube stickers. The idea is to press the button on the GC, which will play a song and record someone dancing for a set amount of time. You then pass the GC to a friend, who records themselves dancing to the next portion of the song, and so on. At the end, the GC uses Python scripts to concatenate the videos using FFMPEG, then uploads the video to YouTube. We also made packaging for the GC with simple instructions. In this way, virtual freestyle videos can be formed. I was mainly responsible for design, debugging, and final presentation items.
+		In the Critical Practices class at UC Berkeley, CNM190, I was placed in a group with Serena Chang, Alice Pang, Mark Lam, and Ingrid Hong. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. Our focus was on freestyle circles and how to encourage shy people to participate and foster a closer community within dance teams. Some components used were a Raspberry Pi, the Raspberry Pi camera module, speaker, and a laser cutter. The idea is to press the button on the GC, which will play a song and record someone dancing for a set amount of time. You then pass the GC to a friend, who records themselves dancing to the next portion of the song, and so on. At the end, the GC uses Python scripts to concatenate the videos using FFMPEG, then uploads the video to YouTube. We also made packaging for the GC with simple instructions. In this way, virtual freestyle videos can be formed. I was mainly responsible for design, debugging, and final presentation items.
 		</div>
 	</div>
 	<div class="back">
@@ -313,7 +312,7 @@
 	<div class="container">
 		<div class="title">Juniper Networks Internship Project</div>
 		<div class="description">
-		I interned at Juniper Networks as a Technical Marketing Engineer/Software Developer intern under Product Line Management, JDI division. My main intern project was solving the problem of customers not making use of Juniper's automation tools and scripts. One reason to this problem is that Juniper's resources are scattered everywhere, making starting automation a hassle to some. So I created a website with Linux, Apache 2, MySQL, PHP, HTML, and CSS to search through a database of automation tools and code such as PyEZ and Slax scripts to expand awareness and usability of automation. Since my Automation Tools and Code Index highly resembled a Pokedex, which are used to search for Pokemon, I decided to do a Pokemon theme for the intern showcase, with automation tools and scripts as the Pokemon. Made video with dubbed subtitles about my project, stickers and handouts as Pokemon cards with information on various automation tools and links to the site itself. The site can only be accessed within Juniper's VPN, but links to the showcase presentation and video are on the right. Shoutout to my awesome managers for believing in and being there for me.
+		I interned at Juniper Networks as a Technical Marketing Engineer/Software Developer intern. My main intern project was solving the problem of customers not making use of Juniper's automation tools and scripts. One reason to this problem is that Juniper's resources are scattered everywhere, making starting automation a hassle to some. So I created a website with Linux, Apache 2, MySQL, PHP, HTML, and CSS to search through a database of automation tools and code such as PyEZ and Slax scripts to expand awareness and usability of automation. Since my Automation Tools and Code Index highly resembled a Pokedex which are used to search for Pokemon, I decided on a Pokemon theme for the intern showcase, with automation tools and scripts as the Pokemon. Made video with dubbed subtitles about my project, stickers and handouts as Pokemon cards with information on various automation tools and links to the site itself, which can only be accessed within Juniper's VPN. Shoutout to my awesome managers for believing in and being there for me.
 		</div>
 	</div>
 	<div class="back">
