--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	<div class="container">
 		<div class="title">A Sea of Quotes iOS App</div>
 		<div class="description">
-		In 2012, I decided to make an iOS app for my Tumblr blog, A Sea of Quotes. However, I knew nothing about coding or computer science at the time and the free app generators I played with did not have the functionality or look I wanted. So 4 years later in my iOS class when the final project was whatever we desired, I chose to fulfill my dream of making an iOS app for A Sea of Quotes. The app is more user-friendly for quote-hunting than the Tumblr app or mobile version of the blog in that the quotes you save will only be quotes saved to the Core Data of the phone for easy viewing later as opposed to the Tumblr app where it may be a mix of your likes throughout the Tumblr platform, you can easily search for quotes which cannot be done in the Tumblr app, and a more consistent feel/look with the theme of ASQ which is difficult to customize on the Tumblr app. While the basic functionality works, this app could use some improvements in the UI and loading times that I'm working on to eventually put on the App Store one day.  
+		In 2012, I decided to make an iOS app for my Tumblr blog, A Sea of Quotes. However, I knew nothing about coding at the time and the free app generators I played with did not have the functionality or look I wanted. So 4 years later in my iOS class, I chose to fulfill my dream of making an iOS app for A Sea of Quotes. The app is more user-friendly for quote-hunting and quote-saving than the Tumblr app or mobile version of the blog, you can easily search for quotes which cannot be done in the Tumblr app, and a more consistent feel/look with the theme of ASQ which is difficult to customize on the Tumblr app. While the basic functionality works, this app could use some improvements in the UI and loading times that I'm working on to eventually put on the App Store one day.  
 		</div>
 	</div>
 	<div class="back">
@@ -249,7 +249,7 @@
 	<div class="container">
 		<div class="title">First Steps Android App</div>
 		<div class="description">
-		The User and Interface Design Class at Berkeley, CS160, divided us into groups based on our skill sets. I was placed in a group with Simon Cao, Zach Hawtof, Ryan Kapur, and Hector Gonzalez. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. As the theme of the semester focused on healthcare, we decided to target an uncommon audience -- alcoholics. The app idea: to help alcoholics find AA meetings best fit for them to encourage them to stay sober. We compared it to competitors already in the market, interviewed alcoholics, and attended AA meetings to make sure what we created wouldn't be condescending or unhelpful. My responsibilites laid more on the design and execution of presentation side, also making sure that teammates were kept on track. I'm lucky to have been placed randomly with my teammates. I had such an amazing time with them, our group chat was popping with GIFS, and we always encouraged and helped each other out.
+		In the User and Interface Design Class at Berkeley, I was placed in a group with Simon Cao, Zach Hawtof, Ryan Kapur, and Hector Gonzalez. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. As the theme of the semester focused on healthcare, we decided to target an uncommon audience -- alcoholics. The app idea: to help alcoholics find AA meetings best fit for them to encourage them to stay sober. We compared it to competitors already in the market, interviewed alcoholics, and attended AA meetings to make sure what we created wouldn't be condescending or unhelpful. My responsibilites laid more on the design and execution of presentation side, also making sure that teammates were kept on track. 
 		</div>
 	</div>
 	<div class="back">
@@ -282,7 +282,7 @@
 	<div class="container">
 		<div class="title">GrooveCube</div>
 		<div class="description">
-		In the Critical Practices class at UC Berkeley, CNM190, I was placed in a group with Serena Chang, Alice Pang, Mark Lam, and Ingrid Hong. As a group, we went through the whole design process, including brainstorming, conducting user interviews, wireframing, prototyping, coding, and presenting the final product. Our focus was on freestyle circles and how to encourage shy people to participate and foster a closer community within dance teams. Some components used were a Raspberry Pi, the Raspberry Pi camera module, speaker, and a laser cutter. The idea is to press the button on the GC, which will play a song and record someone dancing for a set amount of time. You then pass the GC to a friend, who records themselves dancing to the next portion of the song, and so on. At the end, the GC uses Python scripts to concatenate the videos using FFMPEG, then uploads the video to YouTube. We also made packaging for the GC with simple instructions. In this way, virtual freestyle videos can be formed. I was mainly responsible for design, debugging, and final presentation items.
+		In the Critical Practices class at UC Berkeley, CNM190, I was placed in a group with Serena Chang, Alice Pang, Mark Lam, and Ingrid Hong. As a group, we went through the whole design process. Our focus was on freestyle circles and how to encourage shy people to participate and foster a closer community within dance teams. Some components used were a Raspberry Pi and laser cutter. The idea is to press the button on the GC, which will play a song and record you dancing. You then pass the GC to a friend, who records themselves dancing to the next portion of the song, and so on. At the end, the GC uses Python scripts to concatenate the videos using FFMPEG, then uploads the video to YouTube. We also made packaging for the GC with simple instructions. In this way, virtual freestyle videos can be formed. I was mainly responsible for design, debugging, and final presentation items.
 		</div>
 	</div>
 	<div class="back">
@@ -312,7 +312,7 @@
 	<div class="container">
 		<div class="title">Juniper Networks Internship Project</div>
 		<div class="description">
-		I interned at Juniper Networks as a Technical Marketing Engineer/Software Developer intern. My main intern project was solving the problem of customers not making use of Juniper's automation tools and scripts. One reason to this problem is that Juniper's resources are scattered everywhere, making starting automation a hassle to some. So I created a website with Linux, Apache 2, MySQL, PHP, HTML, and CSS to search through a database of automation tools and code such as PyEZ and Slax scripts to expand awareness and usability of automation. Since my Automation Tools and Code Index highly resembled a Pokedex which are used to search for Pokemon, I decided on a Pokemon theme for the intern showcase, with automation tools and scripts as the Pokemon. Made video with dubbed subtitles about my project, stickers and handouts as Pokemon cards with information on various automation tools and links to the site itself, which can only be accessed within Juniper's VPN. Shoutout to my awesome managers for believing in and being there for me.
+		I interned at Juniper Networks as a Technical Marketing Engineer/Software Developer intern. I created a website with Linux, Apache 2, MySQL, PHP, HTML, and CSS to easily search through a database of automation tools and code such as PyEZ and Slax scripts to expand awareness and usability of automation. Since my Automation Tools and Code Index highly resembled a Pokedex which are used to search for Pokemon, I decided on a Pokemon theme for the intern showcase, with automation tools and scripts as the Pokemon. Made video with dubbed subtitles about my project, stickers and handouts as Pokemon cards with information on various automation tools and links to the site itself, which can only be accessed within Juniper's VPN. Shoutout to my awesome managers for believing in and being there for me.
 		</div>
 	</div>
 	<div class="back">
@@ -382,7 +382,6 @@
 	    	<img class="pw" src="img/books.png">
 		</div>
 		<div class="links">
-		<a href="https://web.archive.org/web/20141029022007/http://cuddlrapp.com/" target="_blank"><div class="view" class="icon-link">Go to Cuddlr Redesign</div></a>
 		</div>
 	</div>
 </div> 
