--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Maya Angelica Hernandez</title>
-<!-- 	    <link rel="icon" href="img/logo.png"> -->
+	    <link rel="icon" href="img/mayaahlogo.png">
 
 	    <!-- Bootstrap -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
