Change color scheme

--- a/index.html
+++ b/index.html
@@ -35,47 +35,47 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-		<div class="column-title">I AM...</div>
-		<ul>
-		  <li>from Sacramento, CA</li>
-		  <li>a UC Berkeley senior</li>
-		  <li>a computer science major</li>
-		  <li>a dual U.S./Filipino citizen</li>
-		  <li>striving to be a <a href="http://www.kozaigroup.com/intercultural-effectiveness-scale-ies/">global citizen</a></li>
-		  <li>interested in the challenges of front-end</li>
-		  <li>looking for the next step in my career</li>
-		  <li>looking for some hot Cheetos</li>
-		</ul>
+			<div class="column-title">I AM...</div>
+			<ul>
+			  <li>from Sacramento, CA</li>
+			  <li>a UC Berkeley senior</li>
+			  <li>a computer science major</li>
+			  <li>a dual U.S./Filipino citizen</li>
+			  <li>striving to be a <a href="http://www.kozaigroup.com/intercultural-effectiveness-scale-ies/">global citizen</a></li>
+			  <li>interested in the challenges of front-end</li>
+			  <li>looking for the next step in my career</li>
+			  <li>looking for some hot Cheetos</li>
+			</ul>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-		<div class="column-title">I LIKE...</div>
-		<ul>
-		  <li>creating</li>
-		  <li>coding</li>
-		  <li>designing</li>
-		  <li>writing</li>
-		  <li>reading</li>
-		  <li>nostalgic songs</li>
-		  <li>Reddit</li>
-		  <li>Game of Thrones</li>
-		  <li>hitting golf balls far away</li>
-		  <li>looking out the window on long travels</li>
-		</ul>
+			<div class="column-title">I KNOW...</div>
+			<ul>
+			  <li>Python</li>
+			  <li>HTML</li>
+			  <li>CSS</li>
+			  <li>French</li>
+			  <li>how to Google effectively</li>
+			  <li>how to make things look pretty</li>
+			  <li>how to make things accessible/usable</li>
+			  <li>how to tell a story</li>
+			</ul>
+			<a href="img/Maya-Hernandez-Resume.pdf" target="_blank"><div class="resume" class="icon-link">Resume</div></a>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-		<div class="column-title">I KNOW...</div>
-		<ul>
-		  <li>Python</li>
-		  <li>HTML</li>
-		  <li>CSS</li>
-		  <li>French</li>
-		  <li>how to Google effectively</li>
-		  <li>how to make things look pretty</li>
-		  <li>how to make things accessible/usable</li>
-		  <li>how to tell a story</li>
-		</ul>
-		<a href="img/Maya-Hernandez-Resume.pdf" target="_blank"><div class="resume" class="icon-link">Resume</div></a>
-		</div>
+			<div class="column-title">I LIKE...</div>
+			<ul>
+			  <li>creating</li>
+			  <li>coding</li>
+			  <li>designing</li>
+			  <li>writing</li>
+			  <li>reading</li>
+			  <li>nostalgic songs</li>
+			  <li>Reddit</li>
+			  <li>Game of Thrones</li>
+			  <li>hitting golf balls far away</li>
+			  <li>looking out the window on long travels</li>
+			</ul>
+		</div>	
 	</div>
 </div>
 </div>
@@ -88,7 +88,7 @@
 
 <header>
 <div id="name">
-<span class="there">MAYA<span class="expand">&nbsp;&nbsp;</span>A</span><span class="expand">NGELIC<span class="black">A</span></span><span class="expand">&nbsp;&nbsp;</span><span class="there black">H</span><span class="expand black">ERNANDEZ</span></div>
+<span class="there">MAYA<span class="expand">&nbsp;&nbsp;</span>A</span><span class="expand">NGELIC<span>A</span></span><span class="expand">&nbsp;&nbsp;</span><span class="there">H</span><span class="expand">ERNANDEZ</span></div>
 </header>
 
 
@@ -132,7 +132,7 @@
 		</div>
 	</div>
  	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -161,7 +161,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div>
 
@@ -190,7 +190,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -221,7 +221,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -253,7 +253,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div>     
 
@@ -286,7 +286,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div>   
 
@@ -316,7 +316,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div>  
 
@@ -345,7 +345,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -371,7 +371,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -393,7 +393,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -421,7 +421,7 @@
 		</div>
 	</div>
 	<div class="back">
-	<img src="img/back.png">
+	<img src="img/back-white.png">
 	</div>
 </div> 
 
@@ -430,10 +430,10 @@
 <span class="about-text">ABOUT&nbsp;ME</span>
 </div>
 <div id="social">
-<a href="mailto:mayaah@berkeley.edu" class="icons"><img src="img/email.png"></a>
-<a href="http://github.com/mayaah" class="icons"><img src="img/gh.png"></a>
-<a href="http://www.linkedin.com/in/mayaah" class="icons"><img src="img/li.png"></a>
-<a href="http://www.youtube.com/channel/UCA9LKLw8TGmIiA_LF3N2_bw" class="icons"><img src="img/yt.png"></a>
+<a href="mailto:mayaah@berkeley.edu" class="icons"><img src="img/email-white.png"></a>
+<a href="http://github.com/mayaah" class="icons"><img src="img/gh-white.png"></a>
+<a href="http://www.linkedin.com/in/mayaah" class="icons"><img src="img/li-white.png"></a>
+<a href="http://www.youtube.com/channel/UCA9LKLw8TGmIiA_LF3N2_bw" class="icons"><img src="img/yt-white.png"></a>
 </div>
 </footer>
 
