Update info, add photo of myself, change more colors

--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
 		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 			<div class="column-title">I AM...</div>
 			<ul>
+			  <li>a recent Computer Science UC Berkeley grad</li>
+			  <li>a software engineer at <a href="http://www.braze.com" target="_blank">Braze</a></li>		
 			  <li>from Sacramento, CA</li>
-			  <li>a UC Berkeley senior</li>
-			  <li>a computer science major</li>
+			  <li>currently based in NYC</li>
 			  <li>a dual U.S./Filipino citizen</li>
-			  <li>striving to be a <a href="http://www.kozaigroup.com/intercultural-effectiveness-scale-ies/">global citizen</a></li>
-			  <li>interested in the challenges of front-end</li>
-			  <li>looking for the next step in my career</li>
-			  <li>looking for some hot Cheetos</li>
+			  <li>striving to be a <a href="http://www.kozaigroup.com/intercultural-effectiveness-scale-ies/" target="_blank">global citizen</a></li>
+			  <li>interested in the challenges of full-stack</li>
+			  <li>trying to not fall into a routine</li>
+			  <li>trying to eat good Mexican food in NYC</li>
 			</ul>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 			<div class="column-title">I KNOW...</div>
 			<ul>
-			  <li>Python</li>
-			  <li>HTML</li>
-			  <li>CSS</li>
+			  <li>Python/Java/C/Ruby</li>
+			  <li>HTML/CSS/JS</li>
+			  <li>Photoshop</li>
 			  <li>French</li>
 			  <li>how to Google effectively</li>
 			  <li>how to make things look pretty</li>
@@ -69,11 +70,9 @@
 			  <li>designing</li>
 			  <li>writing</li>
 			  <li>reading</li>
-			  <li>nostalgic songs</li>
 			  <li>Reddit</li>
 			  <li>Game of Thrones</li>
-			  <li>hitting golf balls far away</li>
-			  <li>looking out the window on long travels</li>
+			  <li>beer</li>
 			</ul>
 		</div>	
 	</div>
@@ -107,6 +106,10 @@
   <div class="grid-item" id="10"><div class="grid-inner">NaNoWriMo</div></div>
   <div class="grid-item" id="11"><div class="grid-inner">Everyday Video Project: Philippines</div></div>
 </div>
+</div>
+
+<div class="my-photo-container">
+	<img id="my-photo" src="img/me.jpg">
 </div>
 
 
@@ -399,7 +402,7 @@
 
 <div class="right-panel" id="11right-panel">
 	<div class="container">
-		<div class="date">Summer 2015, Summer 2016</div>
+		<div class="date">Summer 2015, Summer 2016, Summer 2017</div>
 		<div class="cycle-slideshow">
 	    	<img class="pw" src="img/ph1.png">
 	    	<img class="pw" src="img/ph2.png">
@@ -408,6 +411,7 @@
 	    	<img class="pw" src="img/ph5.png">
 		</div>
 		<div class="links">
+		<a href="https://www.youtube.com/watch?v=OWyxnyOiQis&list=PLler2osELfWHUHmmMPkOhra5w1uAtlM4P" target="_blank"><div class="view" class="icon-link">Summer 2017</div></a>
 		<a href="https://www.youtube.com/playlist?list=PLler2osELfWEPLUNsNzH4qRpCWKaKbjuN" target="_blank"><div class="view" class="icon-link">Summer 2016</div></a>
 		<a href="https://www.youtube.com/playlist?list=PLler2osELfWFV6elOFVzVIvlrFMI1Z-Q8" target="_blank"><div class="view" class="icon-link">Summer 2015</div></a>
 		</div>
