--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             content="width=device-width, initial-scale=1.0">
       <title>Maya Angelica Hernandez</title>
       <link rel="icon"
-            href="img/mayaahlogo.png">
+            href="img/mayalogojpg.jpg">
 
       <!-- Bootstrap -->
       <link href="css/bootstrap.min.css"
