Replace Cuddlr with Critique Connect, some minor design and copy fixes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                 <li>from Sacramento, CA</li>
                 <li>currently based in NYC</li>
                 <li>a dual U.S./Filipino citizen</li>
-                <li>striving to be a <a href="http://www.kozaigroup.com/intercultural-effectiveness-scale-ies/" target="_blank">global citizen</a></li>
                 <li>interested in the challenges of full-stack</li>
                 <li>trying to not fall into a routine</li>
                 <li>trying to eat good Mexican food in NYC</li>
@@ -84,6 +83,7 @@
                   <li>designing</li>
                   <li>writing</li>
                   <li>reading</li>
+                  <li>learning</li>
                   <li>Reddit</li>
                   <li>Game of Thrones</li>
                   <li>beer</li>
@@ -103,6 +103,7 @@
     <header>
       <div id="name">
       <span class="there">MAYA<span class="expand">&nbsp;&nbsp;</span>A</span><span class="expand">NGELIC<span>A</span></span><span class="expand">&nbsp;&nbsp;</span><span class="there">H</span><span class="expand">ERNANDEZ</span></div>
+      <a id="blog-text" href="http://blog.mayaah.me" target="_blank">BLOG</a>
     </header>
 
     <!-- Projects Grid -->
@@ -120,37 +121,37 @@
         </div>
         <div class="grid-item" id="3">
           <div class="grid-inner">
-            A Sea of Quotes iOS App
+            Critique Connect
           </div>
         </div>
         <div class="grid-item" id="4">
           <div class="grid-inner">
-            Virtual Reality @ Berkeley Website
+            A Sea of Quotes iOS App
           </div>
         </div>
         <div class="grid-item" id="5">
           <div class="grid-inner">
-            First Steps Android App
+            Virtual Reality @ Berkeley Website
           </div>
         </div>
         <div class="grid-item" id="6">
           <div class="grid-inner">
-            GrooveCube
+            First Steps Android App
           </div>
         </div>
         <div class="grid-item" id="7">
           <div class="grid-inner">
-            Juniper Networks Internship Project
+            GrooveCube
           </div>
         </div>
         <div class="grid-item" id="8">
           <div class="grid-inner">
-            Burn Android App
+            Juniper Networks Internship Project
           </div>
         </div>
         <div class="grid-item" id="9">
           <div class="grid-inner">
-            Cuddlr Website
+            Burn Android App
           </div>
         </div>
         <div class="grid-item" id="10">
@@ -249,8 +250,53 @@
       </div>
     </div>
 
-    <!-- A Sea of Quotes iOS App -->
+    <!-- Critique Connect -->
     <div class="right-panel" id="3right-panel">
+      <div class="container">
+        <div class="date">
+          Jan 2018 - Present
+        </div>
+        <div class="cycle-slideshow">
+          <img class="pw" src="img/cc1.png">
+          <img class="pw" src="img/cc2.png">
+          <img class="pw" src="img/cc3.png">
+          <img class="pw" src="img/cc4.png">
+        </div>
+        <div class="links">
+          <a href="https://www.critiqueconnect.com" target="_blank">
+            <div class="view icon-link">
+              Go to Critique Connect
+            </div>
+          </a>
+          <a href="https://blog.mayaah.me/tag/critique-connect/" target="_blank">
+            <div class="view icon-link">
+              Blog Posts About Critique Connect
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="left-panel" id="3left-panel">
+      <div class="container">
+        <div class="title">
+          Critique Connect
+        </div>
+        <div class="description">
+          I created Critique Connect because I wanted to combine my passions of what I learned in the book publishing world and the tech world.
+
+          As a former writer and beta writer, I identified a pain point in the writing community: finding other writers and beta readers. There are other various online communities to do this but no good way to search or filter this content that often got lost, was disorganized, and sometimes missed crucial pieces of information. Critique Connect tries to mitigate all of this.
+
+          Critique Connect launched for open beta in April 20, 2019 and as of May 12 has over 150 users and growing. I hope to grow the community further, fix more bugs, and add new features.
+        </div>
+      </div>
+      <div class="back">
+        <img src="img/back-white.png">
+      </div>
+    </div>
+
+    <!-- A Sea of Quotes iOS App -->
+    <div class="right-panel" id="4right-panel">
       <div class="container">
         <div class="date">
           April 2016
@@ -273,7 +319,7 @@
       </div>
     </div>
 
-    <div class="left-panel" id="3left-panel">
+    <div class="left-panel" id="4left-panel">
       <div class="container">
         <div class="title">
           A Sea of Quotes iOS App
@@ -288,7 +334,7 @@
     </div> 
 
     <!-- VR@B Website -->
-    <div class="right-panel" id="4right-panel">
+    <div class="right-panel" id="5right-panel">
       <div class="container">
         <div class="date">
           May 2016 - May 2017
@@ -313,7 +359,7 @@
       </div>
     </div>
 
-    <div class="left-panel" id="4left-panel">
+    <div class="left-panel" id="5left-panel">
       <div class="container">
         <div class="title">
           Virtual Reality @ Berkeley Website
@@ -328,7 +374,7 @@
     </div>
 
     <!-- First Steps Android App -->
-    <div class="right-panel" id="5right-panel">
+    <div class="right-panel" id="6right-panel">
       <div class="container">
         <div class="date">
           Mar 2016 - May 2016
@@ -362,7 +408,7 @@
       </div>
     </div>
 
-    <div class="left-panel" id="5left-panel">
+    <div class="left-panel" id="6left-panel">
       <div class="container">
         <div class="title">
           First Steps Android App
@@ -377,7 +423,7 @@
     </div>
 
     <!-- GrooveCube -->
-    <div class="right-panel" id="6right-panel">
+    <div class="right-panel" id="7right-panel">
       <div class="container">
         <div class="date">
           Nov 2015 - Dec 2015
@@ -407,7 +453,7 @@
       </div>
     </div>
 
-    <div class="left-panel" id="6left-panel">
+    <div class="left-panel" id="7left-panel">
       <div class="container">
         <div class="title">
           GrooveCube
@@ -422,7 +468,7 @@
     </div>
 
     <!-- Juniper Networks -->
-    <div class="right-panel" id="7right-panel">
+    <div class="right-panel" id="8right-panel">
       <div class="container">
         <div class="date">
           May 2016 - Aug 2016
@@ -449,7 +495,7 @@
       </div>
     </div>
 
-    <div class="left-panel" id="7left-panel">
+    <div class="left-panel" id="8left-panel">
       <div class="container">
         <div class="title">
           Juniper Networks Internship Project
@@ -464,7 +510,7 @@
     </div>
 
     <!-- Burn Android App -->
-    <div class="right-panel" id="8right-panel">
+    <div class="right-panel" id="9right-panel">
       <div class="container">
         <div class="date">Feb 2016</div>
         <div class="cycle-slideshow">
@@ -491,49 +537,13 @@
         </div>
       </div>
     </div> 
-    <div class="left-panel" id="8left-panel">
+    <div class="left-panel" id="9left-panel">
       <div class="container">
         <div class="title">
           Burn Android App
         </div>
         <div class="description">
           My first attempt at coding for Android for CS160, the User and Interface Design class in UC Berkeley. The user can input how many minutes/reps of an activity they did and get results of how many calories they burned plus equivalent minutes/reps of other workouts instantly – no extra scrolling or button pressing required. Was featured in class by the professor for its UI and presentation design.
-        </div>
-      </div>
-      <div class="back">
-        <img src="img/back-white.png">
-      </div>
-    </div>
-
-    <!-- Cuddlr -->
-    <div class="right-panel" id="9right-panel">
-      <div class="container">
-        <div class="date">
-          Oct 2014
-        </div>
-        <div class="cycle-slideshow">
-          <img class="pw" src="img/c1.png">
-          <img class="pw" src="img/c2.png">
-          <img class="pw" src="img/c3.png">
-          <img class="pw" src="img/c4.png">
-        </div>
-        <div class="links">
-          <a href="https://web.archive.org/web/20141029022007/http://cuddlrapp.com/" target="_blank">
-            <div class="view icon-link">
-              Go to Cuddlr Redesign
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="left-panel" id="9left-panel">
-      <div class="container">
-        <div class="title">
-          Cuddlr Website
-        </div>
-        <div class="description">
-          Redesigned the landing page in its second iteration for social media app Cuddlr, now known as Spoonr, from scratch. Added responsiveness, toggle FAQ, navigation bar, large video window, while still keeping mood of original website with colors, font, and logos. 
         </div>
       </div>
       <div class="back">
