Fix file extension names

--- a/work-experience-braze.html
+++ b/work-experience-braze.html
@@ -105,24 +105,24 @@
           <div class="image-grid-row">
             <div class="image-grid-column">
               <img class="grid-image" src="img/braze/braze-9.jpeg" alt="IPO Day at Nasdaq">
-              <img class="grid-image" src="img/braze/braze-6.jpg" alt="We did an agile workshop">
-              <img class="grid-image" src="img/braze/braze-5.jpg" alt="New office">
-              <img class="grid-image" src="img/braze/braze-1.jpg">
-              <img class="grid-image" src="img/braze/braze-3.jpg" alt="We had a beer brewing club at work">
+              <img class="grid-image" src="img/braze/braze-6.JPG" alt="We did an agile workshop">
+              <img class="grid-image" src="img/braze/braze-5.JPG" alt="New office">
+              <img class="grid-image" src="img/braze/braze-1.JPG">
+              <img class="grid-image" src="img/braze/braze-3.JPG" alt="We had a beer brewing club at work">
             </div>
             <div class="image-grid-column">
-              <img class="grid-image" src="img/braze/braze-17.png">
-              <img class="grid-image" src="img/braze/braze-14.jpg" alt="IPO Day Remembrance">
-              <img class="grid-image" src="img/braze/braze-10.jpg" alt="Berkeley Career Fair">
+              <img class="grid-image" src="img/braze/braze-17.PNG">
+              <img class="grid-image" src="img/braze/braze-14.JPG" alt="IPO Day Remembrance">
+              <img class="grid-image" src="img/braze/braze-10.JPG" alt="Berkeley Career Fair">
               <img class="grid-image" src="img/braze/braze-8.gif">
-              <img class="grid-image" src="img/braze/braze-7.jpg">
+              <img class="grid-image" src="img/braze/braze-7.JPG">
             </div>
             <div class="image-grid-column">
-              <img class="grid-image" src="img/braze/braze-12.jpg">
+              <img class="grid-image" src="img/braze/braze-12.JPG">
               <img class="grid-image" src="img/braze/braze-2.gif">
-              <img class="grid-image" src="img/braze/braze-16.png">
-              <img class="grid-image" src="img/braze/braze-13.png">
-              <img class="grid-image" src="img/braze/braze-15.jpg">
+              <img class="grid-image" src="img/braze/braze-16.PNG">
+              <img class="grid-image" src="img/braze/braze-13.PNG">
+              <img class="grid-image" src="img/braze/braze-15.JPG">
               <img class="grid-image" src="img/braze/braze-4.gif">
             </div>
           </div>
