--- a/work-experience-juniper-networks.html
+++ b/work-experience-juniper-networks.html
@@ -77,19 +77,19 @@
 
           <div class="image-grid-row">
             <div class="image-grid-column">
-              <img class="grid-image" src="img/juniper/jn-1.jpg">
-              <img class="grid-image" src="img/juniper/jn-4.jpg">
+              <img class="grid-image" src="img/juniper/jn-1.JPG">
+              <img class="grid-image" src="img/juniper/jn-4.JPG">
               <img class="grid-image" src="img/juniper/jn-5.gif">
-              <img class="grid-image" src="img/juniper/jn-9.jpg">
+              <img class="grid-image" src="img/juniper/jn-9.JPG">
             </div>
             <div class="image-grid-column">
-              <img class="grid-image" src="img/juniper/jn-2.jpg">
-              <img class="grid-image" src="img/juniper/jn-6.jpg">
+              <img class="grid-image" src="img/juniper/jn-2.JPG">
+              <img class="grid-image" src="img/juniper/jn-6.JPG">
             </div>
             <div class="image-grid-column">
               <img class="grid-image" src="img/juniper/jn-3.gif">
-              <img class="grid-image" src="img/juniper/jn-7.jpg">
-              <img class="grid-image" src="img/juniper/jn-8.jpg">
+              <img class="grid-image" src="img/juniper/jn-7.JPG">
+              <img class="grid-image" src="img/juniper/jn-8.JPG">
             </div>
           </div>
         </div>
